# ltspice-mcp

./: .gitignore  AGENT_README.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  smoke_test_mcp.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: README.md
docs/github/: PINNED_GETTING_STARTED_DISCUSSION.md  REPO_METADATA.md
scripts/: ltspice_mcp_daemon.sh  trigger_accessibility_permission.py  trigger_sck_permission_prompt.py
src/ltspice_mcp/: __init__.py  analysis.py  ltspice.py  models.py  raw_parser.py  schematic.py  schematic_templates.json  server.py  textio.py  visualization.py
tests/: test_analysis.py  test_development_tools.py  test_ltspice.py  test_ltspice_capture.py  test_meas_ui_accessibility_parity_real.py  test_plot_render_backend.py  test_plot_render_mcp_real.py  test_raw_parser.py  test_render_session.py  test_schematic.py  test_schematic_runtime.py  test_screencapturekit_integration.py  test_server_state.py  test_streamable_http_integration.py  test_symbol_library.py  test_tool_contracts.py  test_verification_queue_tools.py  test_visualization.py
tests/fixtures/schematic/: netlist_case.asc  spec_case.asc
tests/fixtures/schematic/common_circuits/: README.md  bridge_rectifier_filter.asc  common_emitter_npn.asc  common_source_nmos.asc  diode_half_wave_rectifier.asc  inverting_opamp_ac.asc  non_inverting_opamp_spec.asc  rc_highpass_ac.asc  rc_lowpass_ac.asc  resistor_divider_spec.asc  rl_highpass_ac.asc  (+2 more)
